contratos/infra/network.yaml
apiVersion: v1
kind: Service
metadata:
  name: contratos-service
  namespace: estudos
  labels:
    app: contratos
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    app: contratos
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: contratos-destinationrule
  namespace: estudos
spec:
  host: contratos-service.estudos.svc.cluster.local
  subsets:
    - name: pf-v1
      labels:
        version: "release-1.0.0"
        service-mesh: pf
    - name: pj-v1
      labels:
        version: "release-1.0.0"
        service-mesh: pj
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: contratos-vs
  namespace: estudos
spec:
  hosts:
    - contratos-service.estudos.svc.cluster.local
  http:
    - match:
        - headers:
            service-mesh:
              exact: pf
      route:
        - destination:
            host: contratos-service.estudos.svc.cluster.local
            subset: pf-v1
          weight: 100
    - match:
        - headers:
            service-mesh:
              exact: pj
      route:
        - destination:
            host: contratos-service.estudos.svc.cluster.local
            subset: pj-v1
          weight: 100
